# internal/model/article.go
@@ -1,5 +1,7 @@
 package model
 
+import "lastblog/pkg/app"
+
 type Article struct {
 	*Model
 	Title         string `json:"title"`
@@ -8,6 +10,12 @@ type Article struct {
 	CoverImageUrl string `json:"cover_image_url"`
 	State         uint8  `json:"state"`
 }
+
+type ArticleSwagger struct {
+	List  []*Article
+	Pager *app.Pager
+}
+
 
 func (a Article) TableName() string {
 	return "blog_article"
