# internal/routers/api/v1/article.go
@@ -27,9 +27,9 @@ func (a Article) Get(c *gin.Context) {}
 // @Param state query int false "状态"
 // @Param page query int false "页码"
 // @Param page_size query int false "每页数量"
-// @Success 200 {Object} model.Article "请求成功"
-// @Failure 400 {Object} errcode.Error "请求失败"
-// @Failure 500 {Object} errcode.Error "服务器内部错误"
+// @Success 200 {object} model.ArticleSwagger "成功"
+// @Failure 400 {object} errcode.Error "请求错误"
+// @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/articles [get]
 func (a Article) List(c *gin.Context) {}
 
